Resolve panel header overflow issues

--- a/panel/src/scss/components/_header.scss
+++ b/panel/src/scss/components/_header.scss
@@ -6,7 +6,6 @@
     z-index: 9;
     top: 3.5rem;
     display: flex;
-    overflow: hidden;
     min-height: 4.5rem;
     align-items: center;
     padding: 0.5rem 1rem;
